@@ -1,15 +1,13 @@
-package pisarev;
+import index.Index;
+import index.Dictionary;
+import index.Normalizator;
 
-import pisarev.index.Dictionary;
-import pisarev.index.Index;
-import pisarev.index.Normalizator;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.nio.file.attribute.PosixFilePermissions;
-import java.util.List;
-import java.util.Set;
+import java.util.*;
 
 import static java.nio.file.attribute.PosixFilePermission.OWNER_READ;
 import static java.nio.file.attribute.PosixFilePermission.OWNER_WRITE;
@@ -39,11 +37,11 @@ public class Main {
     private static boolean checkFiles(Path indexFile, Path originFile) throws IOException {
         if (Files.isRegularFile(originFile)) {
             if (!Files.isReadable(originFile))
-                Files.setPosixFilePermissions(originFile, Set.of(OWNER_READ));
+                Files.setPosixFilePermissions(originFile, new HashSet<>(Collections.singletonList(OWNER_READ)));
             if (!Files.isRegularFile(indexFile))
-                Files.createFile(indexFile, PosixFilePermissions.asFileAttribute(Set.of(OWNER_READ, OWNER_WRITE)));
+                Files.createFile(indexFile, PosixFilePermissions.asFileAttribute(new HashSet<>(Arrays.asList(OWNER_READ, OWNER_WRITE))));
             else if(!Files.isReadable(indexFile) || !Files.isWritable(indexFile))
-                Files.setPosixFilePermissions(indexFile, Set.of(OWNER_READ, OWNER_WRITE));
+                Files.setPosixFilePermissions(indexFile, new HashSet<>(Arrays.asList(OWNER_READ, OWNER_WRITE)));
             return true;
         }
         return false;
